--- a/TrainTheModel.ipynb
+++ b/TrainTheModel.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy\n",
@@ -29,17 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/deeplearning/Desktop/GITHUB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "PATH = os.getcwd()\n",
     "print (PATH)"
@@ -47,10 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Global Variables\n",
@@ -68,25 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.load(\"/home/deeplearning/Desktop/GITHUB/XtrainWindowSize\" \n",
+    "X_train = np.load(\"GITHUB/XtrainWindowSize\" \n",
     "                  + str(windowSize) + \"PCA\" + str(numPCAcomponents) + \"testRatio\" + str(testRatio)  + \".npy\")\n",
     "\n",
-    "y_train = np.load(\"/home/deeplearning/Desktop/GITHUB/ytrainWindowSize\" \n",
+    "y_train = np.load(\"GITHUB/ytrainWindowSize\" \n",
     "                  + str(windowSize) + \"PCA\" + str(numPCAcomponents) + \"testRatio\" + str(testRatio) + \".npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Reshape into (numberofsumples, channels, height, width)\n",
@@ -95,10 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# convert class labels to on-hot encoding\n",
@@ -107,17 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(30, 5, 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the input shape \n",
     "input_shape= X_train[0].shape\n",
@@ -126,10 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# number of filters\n",
@@ -138,10 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define the model\n",
@@ -161,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sgd = SGD(lr=0.0001, decay=1e-6, momentum=0.9, nesterov=True)\n",
@@ -173,66 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/15\n",
-      "29685/29685 [==============================] - 69s - loss: 2.5077 - acc: 0.2228    \n",
-      "Epoch 2/15\n",
-      "29685/29685 [==============================] - 65s - loss: 1.9555 - acc: 0.4355    \n",
-      "Epoch 3/15\n",
-      "29685/29685 [==============================] - 62s - loss: 1.4767 - acc: 0.5698    \n",
-      "Epoch 4/15\n",
-      "29685/29685 [==============================] - 58s - loss: 1.1480 - acc: 0.6492    \n",
-      "Epoch 5/15\n",
-      "29685/29685 [==============================] - 57s - loss: 0.9374 - acc: 0.7051    \n",
-      "Epoch 6/15\n",
-      "29685/29685 [==============================] - 63s - loss: 0.7952 - acc: 0.7394    \n",
-      "Epoch 7/15\n",
-      "29685/29685 [==============================] - 63s - loss: 0.7023 - acc: 0.7672    \n",
-      "Epoch 8/15\n",
-      "29685/29685 [==============================] - 63s - loss: 0.6307 - acc: 0.7914    \n",
-      "Epoch 9/15\n",
-      "29685/29685 [==============================] - 64s - loss: 0.5749 - acc: 0.8079    - \n",
-      "Epoch 10/15\n",
-      "29685/29685 [==============================] - 68s - loss: 0.5299 - acc: 0.8226    \n",
-      "Epoch 11/15\n",
-      "29685/29685 [==============================] - 63s - loss: 0.4917 - acc: 0.8334    \n",
-      "Epoch 12/15\n",
-      "29685/29685 [==============================] - 64s - loss: 0.4563 - acc: 0.8471    \n",
-      "Epoch 13/15\n",
-      "29685/29685 [==============================] - 64s - loss: 0.4306 - acc: 0.8578    \n",
-      "Epoch 14/15\n",
-      "29685/29685 [==============================] - 64s - loss: 0.3979 - acc: 0.8682    \n",
-      "Epoch 15/15\n",
-      "29685/29685 [==============================] - 62s - loss: 0.3792 - acc: 0.8748    - ETA: 1s \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fe95e3862b0>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.fit(X_train, y_train, batch_size=32, epochs=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import h5py\n",
@@ -241,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -274,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
