--- a/Validation_and_Classification_Maps.ipynb
+++ b/Validation_and_Classification_Maps.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
@@ -30,14 +28,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Global Variables\n",
     "windowSize = 5\n",
-    "numPCAcomponents = 30\n",
+    "numComponents = numPCAcomponents = 30\n",
     "testRatio = 0.25"
    ]
   },
@@ -51,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def loadIndianPinesData():\n",
@@ -102,23 +96,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.load(\"/home/deeplearning/Desktop/GITHUB/XtestWindowSize\" \n",
-    "                 + str(windowSize) + \"PCA\" + str(numPCAcomponents) + \"testRAtio\" + str(testRatio) + \".npy\")\n",
-    "y_test = np.load(\"/home/deeplearning/Desktop/GITHUB/ytestWindowSize\" \n",
+    "X_test = np.load(\"GITHUB/XtestWindowSize\" \n",
+    "                 + str(windowSize) + \"PCA\" + str(numPCAcomponents) + \"testRatio\" + str(testRatio) + \".npy\")\n",
+    "y_test = np.load(\"GITHUB/ytestWindowSize\" \n",
     "                 + str(windowSize) + \"PCA\" + str(numPCAcomponents) + \"testRatio\" + str(testRatio) + \".npy\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_test  = np.reshape(X_test, (X_test.shape[0], X_test.shape[3], X_test.shape[1], X_test.shape[2]))\n",
@@ -128,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load the model architecture and weights\n",
@@ -140,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "classification, confusion, Test_loss, Test_accuracy = reports(X_test,y_test)\n",
@@ -163,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# load the original image\n",
@@ -175,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X,pca = applyPCA(X,numComponents=numComponents)"
@@ -186,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "height = y.shape[0]\n",
@@ -200,16 +180,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# calculate the predicted image\n",
     "outputs = np.zeros((height,width))\n",
     "for i in range(height-PATCH_SIZE+1):\n",
     "    for j in range(width-PATCH_SIZE+1):\n",
-    "        target = int(y[i+PATCH_SIZE/2, j+PATCH_SIZE/2])\n",
+    "        target = int(y[int(i+PATCH_SIZE/2), int(j+PATCH_SIZE/2)])\n",
     "        if target == 0 :\n",
     "            continue\n",
     "        else :\n",
@@ -217,15 +195,13 @@
     "            #print (image_patch.shape)\n",
     "            X_test_image = image_patch.reshape(1,image_patch.shape[2],image_patch.shape[0],image_patch.shape[1]).astype('float32')                                   \n",
     "            prediction = (model.predict_classes(X_test_image))                         \n",
-    "            outputs[i+PATCH_SIZE/2][j+PATCH_SIZE/2] = prediction+1"
+    "            outputs[int(i+PATCH_SIZE/2)][int(j+PATCH_SIZE/2)] = prediction+1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ground_truth = spectral.imshow(classes = y,figsize =(5,5))"
@@ -234,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "predict_image = spectral.imshow(classes = outputs.astype(int),figsize =(5,5))"
@@ -245,21 +219,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
