Update from_package notebooks to work with new tasks

--- a/CreatetheDataset_from_package.ipynb
+++ b/CreatetheDataset_from_package.ipynb
@@ -6,11 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from indian_pines_cnn_classification.create import (\n",
-    "    loadIndianPinesData,\n",
-    "    savePreprocessedData,\n",
-    "    preprocessData)\n",
-    "    "
+    "from indian_pines_cnn_classification.create import preprocess_data"
    ]
   },
   {
@@ -19,25 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data, labels = loadIndianPinesData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test, opts = preprocessData(data, labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "savePreprocessedData(X_train, X_test, y_train, y_test, **opts)"
+    "preprocess_data(data_path=\"data\", output_path=\"split\")"
    ]
   }
  ],
