--- a/TrainTheModel_from_package.ipynb
+++ b/TrainTheModel_from_package.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from indian_pines_cnn_classification.train import (\n",
-    "    loadTrainingDataset,\n",
-    "    trainModel,\n",
-    "    saveModel)"
+    "from indian_pines_cnn_classification.train import train_model"
    ]
   },
   {
@@ -18,25 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, y_train = loadTrainingDataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = trainModel(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saveModel(model)"
+    "train_model(data_path='split', model_path='model.h5')"
    ]
   }
  ],
