--- a/Validation_and_Classification_Maps_from_package.ipynb
+++ b/Validation_and_Classification_Maps_from_package.ipynb
@@ -6,10 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import display, Image\n",
     "from indian_pines_cnn_classification.validate import (\n",
-    "    loadIndianPinesData,\n",
-    "    loadTestData,\n",
-    "    loadModel,\n",
     "    validate,\n",
     "    classify\n",
     ")"
@@ -21,17 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = loadModel()\n",
-    "X_test, y_test = loadTestData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss, accuracy, cls, confusion = validate(model, X_test, y_test)"
+    "loss, accuracy, cls, confusion = validate(\n",
+    "    model_path='model.h5', test_data_path='split')"
    ]
   },
   {
@@ -68,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = loadIndianPinesData()"
+    "paths = classify(model_path='model.h5', data_path='data')"
    ]
   },
   {
@@ -77,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = classify(model, X, y)"
+    "display(Image('ground_truth.jpg', width=200, height=200))"
    ]
   },
   {
@@ -86,25 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spectral"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ground_truth = spectral.imshow(classes = y,figsize =(5,5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict_image = spectral.imshow(classes = outputs.astype(int),figsize =(5,5))"
+    "display(Image('classification.jpg',  width=200, height=200))"
    ]
   }
  ],
